# zecwallet-mobile

./: .gitignore  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/zecwalletmobile/: RPCModule.kt
app/: AppState.ts  LoadedApp.tsx  rpc.ts  utils.ts
components/: About.tsx  Components.tsx  ImportKey.tsx  InfoModal.tsx  PrivKeyModal.tsx  ReceiveScreen.tsx  SendScreen.tsx  SettingsModal.tsx  TransactionsScreen.tsx
ios/: Podfile  RPCModule.m
ios/ZecwalletMobile.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/android/: Cargo.toml  build.sh  emubuild.sh  localbuild.sh
rust/android/docker/: Dockerfile
rust/ios/: Cargo.toml
rust/lib/: Cargo.toml
rust/lib/src/: lib.rs
